<resources>
    <string name="app_name">TimeTable</string>
<!--    课程时间-->
    <string name="course1">1\n08:00\n08:45</string>
    <string name="course2">2\n08:50\n09:35</string>
    <string name="course3">3\n09:50\n10:35</string>
    <string name="course4">4\n10:40\n11:25</string>
    <string name="course5">5\n11:30\n12:15</string>
    <string name="course6">6\n14:05\n14:50</string>
    <string name="course7">7\n14:55\n15:40</string>
    <string name="course8">8\n15:45\n16:30</string>
    <string name="course9">9\n16:40\n17:25</string>
    <string name="course10">10\n17:30\n18:15</string>
    <string name="course11">11\n18:30\n19:15</string>
    <string name="course12">12\n19:20\n20:05</string>
    <string name="course13">13\n20:10\n20:55</string>
<!--    星期名-->
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="empty">empty</string>
<!--    课程属性-->
    <string name="kcmc">课程名</string>
    <string name="cdmc">教室</string>
    <string name="kcxz">性质</string>
    <string name="jc">节数</string>
    <string name="zcd">周数</string>
    <string name="kcxszc">学识</string>
    <string name="xm">教师</string>
    <string name="zcmc">职称</string>
    <string name="khfsmc">课后实践</string>
<!--    用户设置-->
    <string name="user_name">账号</string>
    <string name="password">密码</string>
    <string name="start_week">当前周</string>
    <string name="import_courses">导入课程</string>
    <string name="add_courses">添加课程</string>
    <string name="week">星期</string>
    <string name="to">—</string>
    <string name="day">周</string>
    <string name="show_current_courses">显示本周课程</string>
    <string name="show_un_current_courses">显示非本周课程</string>
    <string name="change_background">切换背景</string>
    <string name="reset_table">重置课表</string>
</resources>
